# RoVi2-PickHandProject

./: .gitattributes  .gitignore  README  README.md
components/caros_grasp_selection/: CMakeLists.txt  mainpage.md  package.xml
components/caros_grasp_selection/launch/: robworkcell.launch
components/caros_grasp_selection/msg/: GraspTarget.msg
components/caros_grasp_selection/scripts/: dummyRobotState.py
components/caros_grasp_selection/src/: GraspDBRepository.cpp  GraspDBRepository.hpp  grasp_selection.cpp  robworkcell.cpp
components/caros_grasp_selection/srv/: SelectGrasps.srv
core/caros_common/: CMakeLists.txt  mainpage.md  package.xml
core/caros_common/src/: CarosNodeServiceInterface.cpp  caros_node_service_interface.cpp  common.cpp
core/caros_common/test/: type_conversion.cpp
core/caros_common_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
core/caros_common_msgs/msg/: RWState.msg  WrenchData.msg  caros_node_state.msg  rw_state.msg
core/caros_common_msgs/srv/: ConfigBool.srv  GetRWState.srv  get_rw_state.srv
core/caros_common_robwork_msgs/: CMakeLists.txt
core/caros_common_robwork_msgs/msg/: rw_state.msg
core/caros_common_robwork_msgs/srv/: get_rw_state.srv
core/caros_msgs/: CMakeLists.txt  package.xml
core/caros_msgs/msg/: Joint.msg  Joints.msg
core/caros_msgs/src/: RwRos_Test.cpp  caros.cpp
core/common/: CMakeLists.txt  package.xml
core/common/msg/: CarosNodeState.msg
core/common/src/: CarosNodeServiceInterface.cpp  common.cpp
core/core/: CMakeLists.txt  package.xml
hwcomponents/caros_netft/: CMakeLists.txt  mainpage.md  package.xml
hwcomponents/caros_netft/launch/: caros_netft.launch  caros_netft_param.xml
hwcomponents/caros_netft/src/: main_netft.cpp  netft_node.cpp
hwcomponents/caros_netft/test/: simple_netft_demo.cpp  simple_netft_demo.test
hwcomponents/caros_robotiq/: CMakeLists.txt  mainpage.md  package.xml
hwcomponents/caros_robotiq/launch/: caros_robotiq2.launch  caros_robotiq2_param.xml  caros_robotiq3.launch  caros_robotiq3_param.xml
hwcomponents/caros_robotiq/src/: Robotiq3Node.cpp  main_robotiq2.cpp  main_robotiq3.cpp  robotiq3_node.cpp  robotiq_node.cpp
hwcomponents/caros_robotiq/test/: simple_demo.test  simple_robotiq2_demo.cpp  simple_robotiq2_demo.test  simple_robotiq3_demo.cpp  simple_robotiq3_demo.test
hwcomponents/caros_sdh/: CMakeLists.txt  mainpage.md  package.xml
hwcomponents/caros_sdh/launch/: caros_sdh.launch
hwcomponents/caros_sdh/src/: SDHNode.cpp  sdh_main.cpp  sdh_node.cpp
hwcomponents/caros_sdh/test/: simple_demo.cpp  simple_demo.test
hwcomponents/caros_trakstar/: CMakeLists.txt  mainpage.md  package.xml
hwcomponents/caros_trakstar/launch/: mytrakstar.launch
hwcomponents/caros_trakstar/plugins/: nodelet_plugins.xml
hwcomponents/caros_trakstar/src/: Trakstar.cpp  Trakstar.hpp  main.cpp  stdafx.h  trakstar_node.cpp
hwcomponents/caros_universalrobot/: CMakeLists.txt  mainpage.md  package.xml  rosdoc.yaml
hwcomponents/caros_universalrobot/launch/: caros_universalrobot.launch  caros_universalrobot_param.xml  caros_ur.launch  caros_ur_param.xml
hwcomponents/caros_universalrobot/src/: URServiceInterface.cpp  UniversalRobots.cpp  universal_robots.cpp  ur_main.cpp  ur_service_interface.cpp
hwcomponents/caros_universalrobot/srv/: URServiceForceModeStart.srv  URServiceForceModeUpdate.srv  URServoQ.srv  ur_service_servo_q.srv  ur_servo_q.srv
hwcomponents/caros_universalrobot/test/: simple_demo_using_SerialDeviceSIP.cpp  simple_demo_using_SerialDeviceSIP.test  simple_demo_using_move_ptp.cpp  simple_demo_using_move_ptp.test  simple_demo_using_move_servo_q.cpp  simple_demo_using_move_servo_q.test  simple_demo_using_serial_device_sip.cpp  simple_demo_using_serial_device_sip.test  universal_robot_test.h
interfaces/caros_control/: CMakeLists.txt  mainpage.md  package.xml
interfaces/caros_control/src/: GripperSIProxy.cpp  GripperServiceInterface.cpp  SerialDeviceSIProxy.cpp  SerialDeviceServiceInterface.cpp  gripper_service_interface.cpp  gripper_si_proxy.cpp  serial_device_service_interface.cpp  serial_device_si_proxy.cpp
interfaces/caros_control/test/: gripper_service_interface_dummy.cpp  gripper_service_interface_dummy.h  gripper_service_interface_proxy.cpp  gripper_service_interface_proxy.h  gripper_service_interface_proxy.test  gripper_service_interface_proxy_bad_service_call.cpp  gripper_service_interface_proxy_persistent_connection.cpp  gripper_service_interface_proxy_services_failure.cpp  gripper_service_interface_proxy_services_success.cpp  gripper_service_interface_proxy_unavailable_service.cpp  serial_device_service_interface_dummy.cpp  serial_device_service_interface_dummy.h  serial_device_service_interface_proxy.cpp  serial_device_service_interface_proxy.h  serial_device_service_interface_proxy.test  serial_device_service_interface_proxy_bad_service_call.cpp  serial_device_service_interface_proxy_persistent_connection.cpp  serial_device_service_interface_proxy_services_failure.cpp  serial_device_service_interface_proxy_services_success.cpp  serial_device_service_interface_proxy_unavailable_service.cpp
interfaces/caros_control_msgs/: CMakeLists.txt  mainpage.md  package.xml
interfaces/caros_control_msgs/msg/: GripperState.msg  RobotState.msg  gripper_state.msg  robot_state.msg
interfaces/caros_control_msgs/srv/: GripperGripQ.srv  GripperMoveQ.srv  GripperSetForceQ.srv  GripperSetVelocityQ.srv  SerialDeviceMoveLin.srv  SerialDeviceMoveLinFC.srv  SerialDeviceMoveLinFc.srv  SerialDeviceMovePTP.srv  SerialDeviceMovePTP_T.srv  SerialDeviceMoveServoQ.srv  SerialDeviceMoveVelQ.srv  SerialDeviceMoveVelT.srv  serial_device_force_control_start.srv  serial_device_force_control_update.srv  serial_device_move_vel_q.srv  serial_device_move_vel_t.srv
interfaces/caros_sensor/: CMakeLists.txt  mainpage.md  package.xml
interfaces/caros_sensor/src/: ButtonSensorSIProxy.cpp  FTSensorSIProxy.cpp  (+9 more)
interfaces/caros_sensor_msgs/: CMakeLists.txt  mainpage.md  package.xml
interfaces/control/: CMakeLists.txt  package.xml
interfaces/sensor/: CMakeLists.txt  package.xml
(+131 files in other folders)
