<?xml version="1.0"?>
<package format="2">
  <name>caros_grasp_selection</name>
  <version>0.0.1</version>
  <description>Computing a grasp to execute for a specific task context, environment, gripper, and object</description>
  <maintainer email="jimali@mmmi.sdu.dk">jimali</maintainer>
  <license>BSD</license>
  <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>caros_common</depend>
  <depend>caros_control</depend>
  <depend>caros_sensor</depend>

  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
